--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,31 @@
 ---
 # tasks file for lighthouse-role
+
+- name: подготовка репозитория nginx
+  template:
+    src: templates/nginx.repo.j2
+    dest: /etc/yum.repos.d/nginx.repo
+
+- name: install nginx git nano
+  become: true
+  ansible.builtin.yum:
+    name:
+      - nginx
+      - git
+      - nano
+    state: present
+    update_cache: true
+  notify: Start nginx service
+
+- name: clone git repo lighthouse
+  git:
+    repo: 'https://github.com/VKCOM/lighthouse.git'
+    dest: "/usr/share/nginx/html/lighthouse/"
+    force: yes
+  notify: Start nginx service
+
+- name: подготовка конфига nginx
+  template:
+    src: templates/default.conf.j2
+    dest: /etc/nginx/conf.d/default.conf
+  notify: Start nginx service
