--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,9 +14,9 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license:  MIT
+  # license:  MIT
 
-  min_ansible_version: 2.1
+  # min_ansible_version: 2.1
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -27,6 +27,6 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-   platforms:
-   - name: centos
+  #  platforms:
+  #  - name: centos
   
