--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Dmitry Illarionov
-  description: lighthouse role
+  description: vector role
   company: dmil
 
   # If the issue tracker for your role is not on github, uncomment the
